--- a/index.html
+++ b/index.html
@@ -14,11 +14,41 @@
           <p>
             This is not a real online service! You know you need something like
             this in your life to help you realize your deepest dreams. Sign up
-            now to get started.
+            <em>now</em> to get started.
           </p>
-          <p>You know you want to.</p>
+          <p>You <em>know</em> you want to.</p>
         </div>
-        <div id="form-container">form</div>
+        <div id="form-container">
+          Let's do this!
+          <form action="" method="post">
+            <div class="form-item">
+              <label for="first-name">First Name</label>
+              <input id="first-name" name="first-name" type="text" />
+            </div>
+            <div class="form-item">
+              <label for="last-name">Last Name</label>
+              <input id="last-name" name="last-name" type="text" />
+            </div>
+
+            <div class="form-item">
+              <label for="email">Email</label>
+              <input id="email" name="email" type="text" />
+            </div>
+            <div class="form-item">
+              <label for="phone-number">Phone Number</label>
+              <input id="phone-number" name="phone-number" type=tel" />
+            </div>
+
+            <div class="form-item">
+              <label for="password">Password</label>
+              <input id="password" name="password" type="password" />
+            </div>
+            <div class="form-item">
+              <label for="password">Confirm Password</label>
+              <input id="password" name="password" type=password" />
+            </div>
+          </form>
+        </div>
         <div id="button-container">button</div>
       </div>
     </div>
