--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="form-container">
           Let's do this!
-          <form action="" method="post">
+          <form action="">
             <div class="form-item">
               <label for="first-name">First Name</label>
               <input id="first-name" name="first-name" type="text" />
